# mcpserver

./: .env.example  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
.github/: copilot-instructions.md
configs/: claude.mcp.template.json  vscode.mcp.template.json
scripts/: doctor.ps1  install.ps1  smoke_test.py
src/mcpserver/: __init__.py  claude.py  claude_server.py  cli.py  codex.py  codex_server.py  config.py  doctor.py  grok.py  grok_server.py  models.py  process.py  sessions.py  windows_job.py
tests/: test_claude.py  test_codex.py  test_config.py  test_grok.py  test_process.py
