[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "brooks-model-mcp"
version = "0.1.0"
description = "Unified direct-conversation MCP servers for Codex, Claude, and Grok"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Brooks Sem" }]
dependencies = [
  "httpx==0.28.1",
  "mcp[cli]==1.28.1",
  "platformdirs==4.4.0",
  "pydantic==2.11.7",
  "tenacity==9.1.2",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
  "pytest-asyncio==1.1.0",
  "ruff==0.12.7",
]

[project.scripts]
mcp-codex = "mcpserver.codex_server:main"
mcp-claude = "mcpserver.claude_server:main"
mcp-grok = "mcpserver.grok_server:main"
mcp-doctor = "mcpserver.doctor:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcpserver"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
